# code-samples

./: .gitignore  CMakeLists.txt  README.md
Binding/: Bind.cpp  Bind.h  BindLifetime.cpp  BindLifetime.h  BindServer.cpp  BoundMember.cpp  BoundMember.h  BoundTypeMember.cpp  BoundTypeMember.h  README.md
CompactString/: CompactString.h  CompactStringDebug.cpp  CompactStringDebug.h  CompactStringRelease.cpp  CompactStringRelease.h  FNV1.cpp  README.md
DependencyGraph/: BootupDependencyGraph.graphml  DependencyGraphProcess.cpp  ProcessTraverserCallback.cpp  ProcessTraverserCallback.h  README.md
Event/: Event.cpp  Event.h  EventDispatcher.cpp  EventDispatcher.h  EventDispatcherGameMode.cpp  EventListener.cpp  EventListener.h  EventListenerList.cpp  EventListenerList.h  README.md
Logging/: CMakeLists.txt  ConsoleLogger.cpp  ConsoleLogger.h  LogMarker.cpp  LogMarker.h  Logger.cpp  Logger.h  LoggingPch.h  MakeAndRunDebug.sh  MakeAndRunRelease.sh  PlatformDebug.cpp  PlatformPrint.cpp  PlatformPrint.h  README.md  ScreenReporter.cpp  ScreenReporter.h  SimpleLogger.cpp  SimpleLogger.h  Subscription.cpp  Subscription.h  main.cpp
Logging/Loggers/: ConsoleLogger.cpp  LogMarker.cpp  PlatformPrint.cpp  README.md  ScreenReporter.h
MVCPreCompiler/: MVCPreCompilerMain.cs
Process/: AsyncProcess.cpp  AsyncProcess.h  BatchProcess.cpp  BatchProcess.h  DummyProcess.cpp  DummyProcess.h  NamedProcess.cpp  NamedProcess.h  Process.cpp  Process.h  (+6 more)
WordCache/: CMakeLists.txt  MakeAndRun.sh  README.md  Utf8.h  Utf8.inl  WordCache.cpp  WordCache.h  WordCache.inl  WordCachePch.h  main.cpp
(+266 files in other folders)
